maybe fix: VRT on mobile

--- a/src/client/components/feature/ProductGridList/ProductGridList.module.css
+++ b/src/client/components/feature/ProductGridList/ProductGridList.module.css
@@ -1,7 +1,6 @@
 .cardList {
   align-items: center;
   display: flex;
-  height: 206px;
   overflow-x: scroll;
   padding: 8px 0;
   width: 100%;
